--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-{"data":{"id":1,"email":"george.bluth@reqres.in","first_name":"George","last_name":"Bluth","avatar":"https://reqres.in/img/faces/1-image.jpg"},"support":{"url":"https://reqres.in/#support-heading","text":"To keep ReqRes free, contributions towards server costs are appreciated!"}}
+  
+<!DOCTYPE html>
+<html>
+<!-- 2F4F4F  --- 000000	  -->
+<body bgcolor="2F4F4F">
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<h1 style="color:white;">Welcome to Tech Data Red Hat OpenShift Demo</h1>
+<br><br><br>
+  
+</body>
+</html>
