--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- 2F4F4F  --- 000000	  -->
 <body bgcolor="2F4F4F">
 <br><br><br><br><br><br><br><br><br><br><br><br>
-<h1 style="color:white;">Welcome to Tech Data Red Hat OpenShift Demo</h1>
+<h1 style="color:white;">Welcome to the Tech Data CP4I Demo</h1>
 <br><br><br>
   
 </body>
